First year and memory params